# translation_app

./: .gitignore  LICENSE  README.md  implementation.md  pyproject.toml  translation_app.spec
.github/workflows/: ci.yml
scripts/: build_mac_app.sh
src/export/: __init__.py  __main__.py  docx_writer.py  pdf_converter.py
src/extract/: __init__.py  __main__.py  column_mode.py  document_extractor.py  layout.py  pdfplumber_tables.py  pymupdf_blocks.py  reading_order.py  warnings.py
src/ir/: __init__.py  models.py  serialization.py
src/translate/: __init__.py  __main__.py  base.py  deepl_provider.py  env_loader.py  preview.py  segmenter.py  service.py
src/ui/: __init__.py  __main__.py  main_window.py  settings_dialog.py  settings_store.py  worker.py
tests/: test_env_loader.py  test_export_docx.py  test_extract_regression.py  test_ir_serialization.py  test_phase0_smoke.py  test_phase6_packaging.py  test_reading_order.py  test_translate_preview.py  test_translate_service.py  test_ui_settings_store.py  test_warnings.py
tests/fixtures/: __init__.py  pdf_factory.py
